finish mem2reg